Solved Text Area OverFlow

--- a/public/Css/main.css
+++ b/public/Css/main.css
@@ -145,6 +145,7 @@ body {
 	height: 5rem;
 	margin: 0 1rem;
 	padding: 1rem;
+	font-size: 1rem;
 	letter-spacing: 0.2rem;
 	border-radius: 5rem;
 	font-weight: bold;
